# npsat_v2_9_3

./: CMakeLists.txt  npsat_trace.cpp  npsat_v2.cpp
npsat_flow/: TimeSeries.h  boost_helper_func.h  dof_ownership.h  flow_input.h  flow_structures.h  helper_func.h  hydrogeo_prop.h  local_element_data.h  mesh_gen.h  mnwells.h  mpi_helpers.h  nanoflann.hpp  non_linear.h  poly_x_poly.h  reader_helper_func.h  streams.h  time_step_tracking.h
npsat_flow/BC/: boundary_base.h  boundary_helpers.h  dirichlet_bc.h  ghb_bc.h  lateral_polyline_spatial_interpolant.h
npsat_flow/interpolation/: constant_interpolation.h  gridded_interpolation.h  interp_helpers.h  interp_interface.h  interpolation_function.h  scatter_interpolation.h
npsat_flow/main_class_impl/: npsat_flow_assemble.impl.h  npsat_flow_post.impl.h  npsat_flow_prepare.impl.h  npsat_flow_setup.impl.h  npsat_flow_solve.impl.h  npsat_flow_write_output.impl.h  npsat_flow_write_trace.impl.h
npsat_trace/: cached_velocity.h  particle_reader.h  rt0_face_map.h  trace_help_func.h  trace_input.h  trace_structures.h
npsat_trace/main_class_impl/: npsat_trace_load.impl.h
